# photo-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: commands.md  examples.md  getting-started.md  immich-workflow.md  release-notes-v0.2.0.md  releases-and-packaging.md  roadmap.md  safety.md
examples/: event-date-fix.md  immich-prep.md  staging-cleanup.md  wedding-date-fix.md  year-fix.md
photo/: __init__.py  cli.py
photo/commands/: apply_plan.py  convert_heic.py  date_audit.py  fix_date.py  fix_year.py  hash.py  move_prefix.py  plan.py  remove_duplicates.py  rename_from_exif.py  report.py  strip_gps.py  undo.py  validate_import.py  verify.py
photo/config/: date-rules.example.yaml  presets.example.yaml
photo/core/: __init__.py  filesystem.py  hashing.py  logging.py  metadata.py  operations.py  reports.py  safety.py
tests/: test_toolkit.py
