[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-toolkit"
version = "0.1.0"
description = "Safe-by-default photo and video library preparation CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "photo-toolkit contributors" }]
keywords = ["photos", "metadata", "exif", "immich", "photoprism", "nas", "archive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: System :: Archiving",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
heic = ["pillow>=10.0.0", "pillow-heif>=0.16.0"]

[project.scripts]
photo = "photo.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["photo"]
